Fix spacing issues of navbar

--- a/schedule_lessons/dashboard/static/dashboard/css/scheduler.css
+++ b/schedule_lessons/dashboard/static/dashboard/css/scheduler.css
@@ -19,16 +19,6 @@ nav {
   background-color: #FEDC32;
 }
 
-.ml-auto {
-  margin-top: 10px;
-}
-
-/* Not used right now; no logo
-#logo {
-  width: 70%;
-}
-*/
-
 h3 {
     font-family: LightFont;
     font-size: 30px;
